--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <li><img src="./Images/song icon.png" height="50px" width="50px" alt="Song Icon"><a href="./My favourite Songs Code.html">favourite Songs</a></li>
 <li><img src="./Images/Rubik hobby.png"height="50px" width="50px" alt="Hobby icon"><a href="./My hobbies.html">My Hobbies</a></li>
 <li><img src="./Images/Soul ani.jpg"height="50px" width="50px" alt="Animal icon"><a href="./My soul animal.html">My soul animal</a></li>
-    <li><img src="./Images/Soul ani.jpg"height="50px" width="50px" alt="Animal icon"><a href="./contact.html">Contact Me</a></li>
+    <li><a href="./contact.html">Contact Me</a></li>
  </ul>
 </body>
 </html>
