--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <hr>
 <p>Or if you want to leave your details then fill the form</p>
 <hr>
-<form>
+<form action="mailto:nilranjan.nath@gmail.com" method="post" enctype="text/plain">
     <label for="">Your name</label>
     <input type="text"><br><br>
     <label for="">Your Email</label>
